--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 #output {
-/* height: 150px;
-width:  400px; */
 background-color: rgb(179, 240, 13);
-border: 25px solid rgb(63, 57, 57);
+background-image: linear-gradient(to top left,rgb(0, 0, 0),rgb(128, 128, 128));
+border: 25px solid rgba(59, 58, 58, 0);
+/* box-shadow: 10px 5px rgb(192, 190, 190); */
+box-shadow: 5px 4px 0 0 rgb(67, 67, 68),
+              3px 2px 0 0 rgb(67, 67, 68) inset;
+max-width: 100%;
+max-height: 100%;
+}
+
+#result_text{
+    color:blanchedalmond;
+    margin:auto;
 }
