--- a/style.css
+++ b/style.css
@@ -1,15 +1,51 @@
 #output {
-background-color: rgb(179, 240, 13);
-background-image: linear-gradient(to top left,rgb(0, 0, 0),rgb(128, 128, 128));
-border: 25px solid rgba(59, 58, 58, 0);
-/* box-shadow: 10px 5px rgb(192, 190, 190); */
-box-shadow: 5px 4px 0 0 rgb(67, 67, 68),
-              3px 2px 0 0 rgb(67, 67, 68) inset;
+/* background-color: rgb(179, 240, 13); */
+background-image: linear-gradient(to top left,rgb(0, 0, 0),rgb(128, 126, 126));
 max-width: 100%;
 max-height: 100%;
 }
+#milk-shake{
+max-width: 100%;
+
+background-image:url("texture2.png");
+background-repeat: repeat;
+     box-shadow:inset 0 0  1px rgb(12, 12, 12);
+     padding:20px 10px 25px 10px;
+     border-radius:0.5em;
+ }
 
 #result_text{
     color:blanchedalmond;
-    margin:auto;
+    /* margin:auto; */
+    margin-bottom: 20px;
+    /* padding-bottom: 20px; */
 }
+
+body{
+  background-color: #d7cec7;
+
+}
+#result-text.b{
+  font-size: 60px;
+  
+}
+.sameLine{
+  display:inline-block;
+  vertical-align: middle;
+}
+#myList{
+  min-height:30px;
+  min-width:80px;
+  font-size: 16px;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 0.4em;
+}
+#size,#dpi{
+  min-height:24px;
+  min-width:5ch;
+  font-size: 16px;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 0.4em;
+  width:5ch;
+}
+
