--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin:20px;
 
 }
 #result-text{
